# pdekit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PDEKit_Config.hpp.in  README.md
examples/testcases-rdm/: Advection-Continuous-RDS-2D-Explicit.cpp  Advection-Continuous-RDS-2D-Implicit.cpp  Advection-Continuous-RDS-3D-Explicit.cpp  Advection-Discontinuous-RDS-2D-Explicit.cpp  Advection-Discontinuous-RDS-2D-Implicit.cpp  Advection-Multigrid-Continuous-RDS-2D.cpp  Advection-RDS-2D-Explicit-h-Adapt.cpp  Advection-RDS-2D-Explicit-p-Adapt.cpp  Advection-RDS-2D-Spectral.cpp  Advection-RDS-2D.cpp  Advection-RDS-3D-Implicit.cpp  Advection-SrcTerm-Continuous-RDS-2D.cpp  BTC0-RDS.cpp  Bump-RDS-2D-Explicit.cpp  Bump-RDS-2D-Implicit.cpp  Bump-RDS-3D-Explicit.cpp  Bump-RDS-3D-Implicit.cpp  Burgers-RDS-2D-Adapt.cpp  Burgers-RDS-2D.cpp  CMakeLists.txt  Diffusion-Continuous-RDS-2D-Explicit.cpp  Falcon-RDS.cpp  Jets-Continuous-RDS-2D-Explicit.cpp  Jets-Continuous-RDS-2D-Implicit.cpp  Jets-Discontinuous-RDS-2D-Explicit.cpp  Jets3D-RDS.cpp  LinearAdvection-Continuous-RDS-2D-Implicit.cpp  Naca-Continuous-RDS-2D-Explicit.cpp  Naca-Discontinuous-RDS-2D-Explicit.cpp  Naca-RDS-2D-Adapt.cpp  Naca-RDS-2D-Implicit.cpp  Naca2D-Multigrid-Continuous-RDS.cpp  OneraM6-RDS.cpp  PostprocessData.cpp  PredefinedFunctions.cpp  PredefinedFunctions.hpp  Ringleb.cpp  SubsonicCylinder-RDS-2D.cpp  SupersonicCylinder-2D-Adapt.cpp  SupersonicCylinder-2D.cpp
src/app/: CMakeLists.txt  Runge-phenomenon.cpp  compute-Vandermonde-cond-number.cpp  plot-rdm-beta.cpp  plot-shape-function.cpp
src/common/: AbstractFactory.cpp  AbstractFactory.hpp  ArrayShape.hpp  ArrayView.hpp  BlockArray.hpp  BlockMultiArray.hpp  CMakeLists.txt  CRTPSingleton.hpp  Component.cpp  Component.hpp  Constants.cpp  Constants.hpp  Core.cpp  Core.hpp  DataMap.hpp  DataMapImpl.hpp  DataMapIterator.hpp  FWInstanceContainer.hpp  FactoryPool.cpp  FactoryPool.hpp  FactoryT.hpp  Flyweight.hpp  Hash.cpp  Hash.hpp  IOStreamUtils.hpp  IteratorRange.hpp  Meta.hpp  OptionMap.cpp  OptionMap.hpp  PDEKITFiles.cmake  PDEKit.hpp  Provider.hpp  PtrHandle.hpp  Range1D.hpp  SharedPointer.hpp  Singleton.hpp  SmallIntegerPack.hpp  StringUtils.cpp  StringUtils.hpp  TaggedBool.hpp  (+6 more)
src/graph/: CMakeLists.txt  Graph.hpp  GraphPartitioner.cpp  GraphPartitioner.hpp  GraphReordering.cpp  GraphReordering.hpp  PDEKITFiles.cmake
src/interpolation/: CMakeLists.txt  CellFluxMetric.hpp  CellGeoMetric.hpp  CellSolutionMetric.hpp  CoarseScaleCorrectionOpBuilder.hpp  ElementAdaptInterpolator.cpp  ElementAdaptInterpolator.hpp  ErrorEstimator.hpp  FEValues.cpp  FEValues.hpp  FluxSpaceMetric.hpp  FunctionSpace.hpp  FunctionSpaceCells.hpp  FunctionSpaceTraces.hpp  GeometryCache.hpp  GeometryCacheBase.hpp  GeometryMetric.hpp  L2ProjectionGlobal.cpp  L2ProjectionGlobal.hpp  L2ProjectionLocal.cpp  L2ProjectionLocal.hpp  MetricFlags.hpp  OperatorResidualCellwise.hpp  OperatorResidualNodal.hpp  PDEKITFiles.cmake  PolyCache.cpp  PolyCache.hpp  PolyCacheCellView.hpp  PolyCacheDescription.cpp  PolyCacheDescription.hpp  PolyMetric.hpp  ResidualRestrictionLocal.cpp  ResidualRestrictionLocal.hpp  SolutionCache.cpp  SolutionCache.hpp  SolutionSpaceMetric.hpp
src/linear_system/: CMakeLists.txt  CoarseScaleCorrection.cpp  CoarseScaleCorrection.hpp  LSAssembler.cpp  LSAssembler.hpp  LSTpetra.cpp  LSTpetra.hpp  LSTrilinos.cpp  LSTrilinos.hpp  LocalTransferOps.hpp  PDEKITFiles.cmake  TpetraComm.hpp  TpetraCrsMatrix.cpp  TpetraCrsMatrix.hpp  TpetraCrsMatrixDiagBlocks.hpp  TpetraDirectSolver.hpp  TpetraDofMap.hpp  TpetraFacadeTools.hpp  TpetraFwd.hpp  TpetraInternalAccess.hpp  TpetraIterativeSolver.hpp  TpetraLinSolver.hpp  TpetraMultiVector.cpp  TpetraMultiVector.hpp  TpetraTraits.hpp  TrilinosCrsMatrix.cpp  TrilinosCrsMatrix.hpp  TrilinosMultiVector.cpp  TrilinosMultiVector.hpp
src/math/: BlockMatrixSparsityPattern.hpp  CMakeLists.txt  DenseConstMatView.hpp  DenseConstVecView.hpp  DenseDMat.hpp  DenseDMatArray.hpp  DenseDMatArrayUniform.hpp  DenseDVec.hpp  DenseMatView.hpp  DenseSMat.hpp  DenseSVec.hpp  DenseVecView.hpp  ExprBase.hpp  LapackInterface.hpp  MathConstants.hpp  MathForward.hpp  MathMeta.hpp  Matrix.hpp  MatrixSparsityPattern.hpp  MatrixStorageOrder.hpp  OperationEvalTime.hpp  PDEKITFiles.cmake  ProductImplementation.hpp  ScalarConstant.hpp  SparseDMat.hpp  TensorInitialization.hpp  TensorRank.hpp  Vector.hpp  VectorTransposeFlag.hpp
src/mesh/: CMakeLists.txt  CellBuffer.hpp  CellGeometry.hpp  CellMarker.cpp  CellMarker.hpp  CellTransform.cpp  CellTransform.hpp  DiscreteElemKey.cpp  DiscreteElemKey.hpp  DofCoordinates.hpp  ElementTopology.hpp  EntityDofRealign.cpp  EntityDofRealign.hpp  EntityRealignCode.cpp  EntityRealignCode.hpp  EntityStatus.cpp  EntityStatus.hpp  KeyCache.hpp  MeshConfig.hpp  MeshConstants.hpp  MeshEntity.cpp  MeshEntity.hpp  MeshEntityIterator.cpp  MeshEntityIterator.hpp  MeshIndex.hpp  MeshPredicates.cpp  MeshPredicates.hpp  PDEKITFiles.cmake  Point.hpp  TopologyPredicates.cpp  TopologyPredicates.hpp  Tria.hpp
src/physics/: CMakeLists.txt  PDEKITFiles.cmake  PhysModelT.hpp  PhysicsClass.hpp
src/solver/: CMakeLists.txt  ElementalMatrixOperator.hpp  ExplicitSolver.cpp  ExplicitSolver.hpp  FEMetric.hpp  FEMetricData.hpp  ImplicitSolver.cpp  ImplicitSolver.hpp  InitialCondition.hpp  NumFlux.hpp  NumFluxAUSM.hpp  NumFluxLaxFriedrichs.hpp  PDEKITFiles.cmake  Postprocessing.hpp  SolverBase.cpp  SolverBase.hpp  SolverIO.cpp  SolverIO.hpp  SolverSetupAlgorithm.hpp
src/tools/: CMakeLists.txt  Loop.hpp  MeshInspector.hpp  PDEKITFiles.cmake
test/: CMakeLists.txt
test/utest-common/: CMakeLists.txt  check_mpi_functionality.cpp  utest-array-view.cpp  utest-blockarray.cpp  utest-blockmultiarray.cpp  utest-component.cpp  utest-core.cpp  utest-factory.cpp  utest-hash.cpp  utest-mpi-send-recv.cpp  utest-option-map.cpp  utest-range.cpp  utest-singleton.cpp  utest-sizes-common.cpp  utest-tags.cpp  utest-uri.cpp  utest-vector-utils.cpp
test/utest-graph/: CMakeLists.txt  utest-graph-partitioner.cpp  utest-graph.cpp
test/utest-interpolation/: CMakeLists.txt  (+13 more)
(+702 files in other folders)
